2017-12-06  Keith Marshall  <keith@users.osdn.me>

	Prepare and publish MinGW.org WSL-5.0.2 release.

	* All files (wsl-5.0.2-release): Tag assigned.

	* Makefile.in (mingwrt-srcdist-package-files): Add reference...
	* $mingwrt_srcdir/*.sx: ...for files matching this template.

2017-12-02  Keith Marshall  <keith@users.osdn.me>

	Provide legacy OS work around for issue [#2357]

	* cpu_features.c: Delete; replace it with...
	* cpu_features.sx: ...this new assembly language file.

	* cpu_features.h [__ASSEMBLER__]
	(__cpu_features, __cpu_features_init): Suppress declarations.

	* Makefile (%.sx): Add $srcdir vpath reference.

2017-11-28  Keith Marshall  <keith@users.osdn.me>

	Handle indeterminate FLT_EVAL_METHOD; fix issue [#2352].

	* include/math.h [FLT_EVAL_METHOD == 0 || FLT_EVAL_METHOD == 1]
	(float_t, double_t): Define them explicitly, as appropriate for each
	of these two specific cases only; otherwise, define them as if for...
	[FLT_EVAL_METHOD == 2]: ...this explicit case, but also apply it as a
	suitable default compromise for the indeterminate case, in which...
	[FLT_EVAL_METHOD != 2]: ...emit indeterminacy warning.

2017-10-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Include, and make <sys/bsdtypes.h> test suite safe.

	* tests/headers.at (sys/bsdtypes.h): Add reference.

	* include/sys/bsdtypes.h [__IN_MINGWRT_TESTSUITE__]: Add to...
	[_BSD_SOURCE || _WINSOCK2_H]: ...these, as conditions for supression
	of "ill-advised usage" warning message.

2017-09-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Factor <sys/time.h> duplicate content out of winsock headers.

	* include/sys/time.h: Assert copyright; tidy layout.
	[_BEGIN_C_DECLS, _END_C_DECLS]: Use them to avoid C++ name mangling.
	[__WINSOCK_H_SOURCED__] (_SYS_TIME_H): Do not define it; hence...
	[!defined _SYS_TIME_H]: ...selectively expose definitions for only...
	(timerclear, timerisset, timercmp): ...these functional macros, and...